[package]
authors = ["Henrik AlseÌr <henrik.alser@me.com>"]
name = "firmware"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]
cortex-m = "0.7.1"
cortex-m-rtic = "0.6.0-rc.4"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
usb-device = "0.2.5"
usbd-serial = "0.1.0"
# usbd-hid = "0.5.0"
embedded-hal = "0.2.4"
heapless = "0.7.3"
postcard = "0.7.2"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
# ssd1306 = "0.7.0"
# embedded-graphics = "0.7.1"

[dependencies.stm32f4xx-hal]
# version = "0.10.1"
git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["rtic", "stm32f411", "usb_fs"]

[features]
# set logging levels here
default = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
